k8s/altair/apps/monitoring/ntfy-alertmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy-alertmanager
  namespace: monitoring
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy-alertmanager
  template:
    metadata:
      labels:
        app: ntfy-alertmanager
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: ntfy-alertmanager
          image: xenrox/ntfy-alertmanager:1.0.1@sha256:8b47358894501641bcf51aa0cc45dc2affb3071f5b60bdaf00af51a579d32583
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: config
              mountPath: /etc/ntfy-alertmanager/config
              subPath: config
      volumes:
        - name: config
          secret:
            secretName: ntfy-alertmanager-config
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy-alertmanager
  namespace: monitoring
spec:
  selector:
    app: ntfy-alertmanager
  ports:
    - port: 8080
      targetPort: 8080
